fix for spot error